# ChangeLog for media-sound/jackmaster
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*jackmaster-0.0.2 (01 Oct 2013)

  01 Oct 2013; Francisco Blas Izquierdo Riera (klondike)
  +jackmaster-0.0.2.ebuild, +files/fix_configure_in.patch, +metadata.xml:
  Add jackmaster
