@@ -1,5 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX fix_configure_in.patch 1098 SHA256 ce28ba9580e67f1424e39c1fc7c27759142cdff78249686c7d493f6d0b6a6b84 SHA512 02609a2c7ce4ae1491e61c490436f060c8caf104e8cf81437367ae57a44347371f40deeb3cdd3fdd04342cf1d4dea4d863f7a1532e57c7480f9ff0c4f02c1e3b WHIRLPOOL dc0709e3157d2afecc1d1dc0b114f60779d42ee273d70dae013187c45e000c3f46169a8ce2f174ac3598d2623afba28e7ae9ce5868d2f69c3e0c661175261eaf
 DIST dev_jackmaster-0.0.2.cpio.7z 40167 SHA256 9c282584508889a0359a6af8373fcb192741dbcbf02266055fc08e6143a09fde SHA512 7f9e140ac918a3dca8d95a07eaa1d7de2f15144e4a4ef492f1f4bef5bf940c547f25c64f66961409692c95c4943a69d2024b3c9793c01c54b32f54e96f61a8d5 WHIRLPOOL cca87c5d99c3760d3df3b113a98cdd38543beb934b215a83fc8361d8ef4b4896f8279b22bf34b292dbe051bdb1d18bc3d17414709eaa4bd6e05babbe604a8c7f
-EBUILD jackmaster-0.0.2.ebuild 1147 SHA256 fa7dd277d957d33f2668b3ab35bfb2a88725b93590e71a65a04439d2e8dc1868 SHA512 6a41e39428627c7c322c4e15bfba86dc09a0be2e3bf8668ce2ad882fb663cdec2de5731ff2e64a0604f61112d363a64c27b04f4b569b04db5a89bfc2024b71a9 WHIRLPOOL 9a1590d9b06232f9b773c40a0570ea954ac41f26a75e68036d4f0f9dfd304e140c5f931f4d6df1cbbbd0724652a0deb356ba94e7656528fc1b78ae723733436f
-MISC ChangeLog 305 SHA256 4906c6c1f3ec2e1b760b51d682334676d16286481afbde25db9954dbade42b93 SHA512 aab990554c229dba6716c94daa29b61ba567108965fe06bdbd04ca23a4a888a4b07a9d8a76847bb9af3f0c44bebe431b89d422bd5e3689ee543e3c0451ba68bf WHIRLPOOL 6750f329d5e431d9cab91e101a4b37f59b6a2b42fca1f178b94ce9a484d066357220f160796e6261d4f2ed20cda3584c66035b8860a8b8d2c1386cba4b9048a9
+EBUILD jackmaster-0.0.2.ebuild 1111 SHA256 e5d80a3a74e39ac958a407cc71adafa734bc253043aa9f955be341e83b59c9d8 SHA512 947305f589dfef06a82b405d9c97fbe3a1bcc886dad6ec59d3d1fc68590dacdf44890e2bd92992859ba2a3f8dac8d68f6879bf6a457604cfb12ccedd2e7a03f5 WHIRLPOOL 707c2f479ed2720c243ae92996798bf5758c7f5e75fa7119d11c50e3198183c4b002f78abeb92742e698fb222947a081aff062013e03bf21a7c00c0e0706c781
+MISC ChangeLog 444 SHA256 b18fe71047b3b74c0e1c8d8cd84f7bf49bc10793a727b885ee468a1c0aecabb5 SHA512 155c19a072ddcbba7fa414a78244724680cda68bc5e5558c8f34a3151772a229f2bd5ba327a8c9d2b854ddca727286f4f36f5d17a85533cc36103a0cdf784a5a WHIRLPOOL 0981305ea79afcfb5f42f02ce613c60dd6acfe98445d573199fc1b95d9c3c10bb6a132f9953b6d088efd0915a359520a3ff1eff5954937ecfde95b4afd2a2e38
 MISC metadata.xml 253 SHA256 1dbda14bf9cc969cc56773f74222988cb7614537385477b0ae98a079c15548e4 SHA512 2a622be3451a9d51c1f5ce5fcb901b3ea74c150cfd12e617a645b73d3d7f00437f30b43d2071a603df19402493baee746a058767caf6539743e78724c04db1f8 WHIRLPOOL 290ff1f4c5e2c7ff189115eb388ac7c40ab6aa9611f2d3df86ed502ed2bfc337fad08542d7a6c54a6d55c4393189161cdfc5117491939b20910e69725066e377
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJUSUp9AAoJEKXBodJLEo5SlUkH/2pWhEvkURvicFfzBey4Eo+W
+y/5cA0RDHdX/hwb63WYrADdLeafARO4KdjkaTHDX5l+/3IxqoneyjQ0Xfc9YMd7e
+yDxG0CerrNSzRp5AfqESD8XLoY4/oRE6i1XBw65Y48i3BWWAY4Mk+qwAtt4C5AjQ
+aN1zHalbJHq4wZEBODjGgPeVgO37NFslwi67kh7/Jd2hkY920v7o4khNy3Q4gmO4
+oApPd/tH3SWJjpnpUnfjtxJsRl4i2VfVK3N0GH9c+Um/8U+3q6/qo0nET1u3g49q
++11nfKX/Wt9euiUc6MI11NnhLndBB3IaXi70fxLhZunTkhkB67tC16guVeOGqDc=
+=QqZH
+-----END PGP SIGNATURE-----
